# pg-diff-rs

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
queries/: all_objects.pgsql  check_create_db_role.pgsql  constraints.pgsql  database.pgsql  dependency_functions.pgsql  dependency_tables.pgsql  extensions.pgsql  functions.pgsql  indexes.pgsql  policies.pgsql  procs.pgsql  schemas.pgsql  sequences.pgsql  tables.pgsql  triggers.pgsql  udts.pgsql  views.pgsql
src/: main.rs
src/object/: constraint.rs  database.rs  extension.rs  function.rs  index.rs  mod.rs  plpgsql.rs  policy.rs  schema.rs  sequence.rs  table.rs  trigger.rs  udt.rs  util.rs  view.rs
test-files/: pl-pgsql-assert-statement.pgsql  pl-pgsql-commit-rollback-statements.pgsql  pl-pgsql-dyn-fors-statement.pgsql  pl-pgsql-dyn-sql-statement.pgsql  pl-pgsql-fori-statement.pgsql  pl-pgsql-fors-statement.pgsql  pl-pgsql-function.pgsql  pl-pgsql-loop-statement.pgsql  pl-pgsql-raise-statement.pgsql  pl-pgsql-return-statement.pgsql  pl-pgsql-sql-statement.pgsql  pl-pgsql-while-statement.pgsql  plpgsql-assign-statement.pgsql  plpgsql-if-statement.pgsql
test-files/plpgsql/: assign-statement.pgsql  cursor-statements.pgsql  forc-statement.pgsql  foreach-statement.pgsql  fori-statement.pgsql  get-diagnostics-statement.pgsql  if-statement.pgsql  loop-statement.pgsql  perform-call-statements.pgsql  return-next-query-statement.pgsql  while-statement.pgsql
test-files/sql/: constraint-alter-changed-timing.pgsql  constraint-alter-changed-type-case1.pgsql  constraint-alter-changed-type-case2.pgsql  constraint-case1.pgsql  (+17 more)
(+2 files in other folders)
