[package]
name = "pg-diff-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = ["postgres", "uuid", "runtime-tokio", "chrono", "derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.205", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
pg_query = "5.1.0"
lazy-regex = { version = "3.3.0", features = ["regex"] }
async-walkdir = "2.0.0"
futures = "0.3.30"
